<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <data>
        <import type="cl.desafiolatam.asuper.modelo.HeroesItem"></import>
        <variable
            name="heroe"
            type="HeroesItem" />
    </data>
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.DetalleHeroe"
        android:layout_margin="5dp"
        android:background="@color/black">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_margin="10dp">

                    <androidx.cardview.widget.CardView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content">

                        <ImageView
                            android:id="@+id/imageView4"
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            tools:src="@tools:sample/avatars"
                            />

                    </androidx.cardview.widget.CardView>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/textView7"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textSize="15dp"
                            android:layout_margin="10dp"
                            android:text="@string/nombreDetalle"
                            android:textColor="@color/white"
                            android:gravity="center"/>

                        <TextView
                            android:id="@+id/textView8"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text ="@{heroe.name}"
                            android:textSize="20dp"
                            android:layout_margin="5dp"
                            android:textColor="@color/white"
                            android:gravity="center"/>

                        <TextView
                            android:id="@+id/textView4"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textSize="15dp"
                            android:textColor="@color/white"
                            android:layout_margin="5dp"
                            android:textAlignment="center"
                            android:text="@string/publicado_por" />

                        <TextView
                            android:id="@+id/textView13"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textColor="@color/white"
                            android:layout_margin="5dp"
                            android:textAlignment="center"
                            android:text="@{heroe.biography.publisher}" />


                    </LinearLayout>

                </LinearLayout>

                <TextView
                    android:id="@+id/textView14"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/biograf_a"
                    android:textColor="@color/white"
                    android:layout_margin="10dp"
                    android:textSize="20dp"/>

                <TextView
                    android:id="@+id/textView1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:text="@{heroe.biography.fullName}"
                    android:textColor="@color/white" />

                <TextView
                    android:id="@+id/textView15"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Trabajo"
                    android:textSize="20dp"
                    android:layout_margin="10dp"
                    android:textColor="@color/white"/>

                <TextView
                    android:id="@+id/textView19"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@{heroe.work.occupation}"
                    android:textSize="15dp"
                    android:textColor="@color/white"
                    android:layout_margin="10dp"/>

                <TextView
                    android:id="@+id/Poderes"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:textAlignment="center"
                    android:textStyle="bold"
                    android:textSize="30dp"
                    android:textColor="@color/white"
                    android:text="@string/Poderes"
                    />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal"
                    android:layout_margin="10dp">

                    <TextView
                        android:id="@+id/textView3"
                        android:layout_width="5dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:textAlignment="center"
                        android:text="@string/Inteligencia"
                        android:textColor="@color/white"
                        android:textSize="15dp" />

                    <TextView
                        android:id="@+id/textView2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:textColor="@color/white"
                        android:textAlignment="center"
                        android:text="@{String.valueOf(heroe.powerstats.intelligence)}"/>

                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal"
                    android:layout_margin="10dp">

                    <TextView
                        android:id="@+id/textView5"
                        android:layout_width="9dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="Fuerza"
                        android:textAlignment="center"
                        android:textColor="@color/white" />

                    <TextView
                        android:id="@+id/textView6"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:textColor="@color/white"
                        android:textAlignment="center"
                        android:text="@{String.valueOf(heroe.powerstats.strength)}" />
                </LinearLayout>


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal"
                    android:layout_margin="10dp">

                    <TextView
                        android:id="@+id/textView9"
                        android:layout_width="7dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:text="Velocidad"
                        android:textAlignment="center"
                        android:textColor="@color/white" />

                    <TextView
                        android:id="@+id/textView10"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:textColor="@color/white"
                        android:textAlignment="center"
                        android:text="@{String.valueOf(heroe.powerstats.speed)}"
                        android:textSize="15dp" />

                </LinearLayout>


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal"
                    android:layout_margin="10dp">

                    <TextView
                        android:id="@+id/textView11"
                        android:layout_width="6dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:text="Poder"
                        android:textAlignment="center"
                        android:textColor="@color/white" />

                    <TextView
                        android:id="@+id/textView12"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:textColor="@color/white"
                        android:textAlignment="center"
                        android:text="@{String.valueOf(heroe.powerstats.power)}" />
                </LinearLayout>



            </LinearLayout>




        </ScrollView>

    </FrameLayout>
</layout>

